<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".MainActivity">

    <item
        android:id="@+id/menu_settings"
        android:title="@string/menu_settings"
        android:orderInCategory="102"
        app:showAsAction="never" />

    <item
        android:id="@+id/menu_help"
        android:title="@string/menu_help"
        android:orderInCategory="103"
        app:showAsAction="never" />

    <item
        android:id="@+id/menu_pinging_on"
        android:title="@string/menu_pinging_on"
        android:orderInCategory="104"
        app:showAsAction="never" />

    <item
        android:id="@+id/menu_pinging_off"
        android:title="@string/menu_pinging_off"
        android:orderInCategory="105"
        app:showAsAction="never" />

</menu>
