<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/pingapp_screenshot_blur60_390x594"
    android:orientation="vertical">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar_add_ping"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="?attr/colorPrimary"
        android:elevation="8dp"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
        android:title="@string/app_name"
        app:navigationIcon="?attr/homeAsUpIndicator"/>

    <TextView
        android:id="@+id/promptDisplay"
        style="@style/defaultStyle"
        android:layout_marginTop="75dp"
        android:layout_marginBottom="15dp"
        android:text="@string/promptDisplay"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="13dp"
        android:orientation="horizontal"
        android:weightSum="10"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin">


        <EditText
            android:id="@+id/usersHost"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:imeOptions="actionDone"
            android:inputType="textUri"
            android:singleLine="true"
            android:layout_weight="10"
            android:text="@string/textfield_initialhost"
            android:textColor="#00ffff"
            android:textSize="20sp" />

        <ImageButton
            android:id="@+id/buttonErase"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|right"
            android:layout_marginBottom="5dp"
            android:layout_weight="1"
            android:background="@android:color/transparent"
            android:src="@drawable/erase_button"/>

    </LinearLayout>


    <ImageView
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_gravity="center_horizontal"
        android:scaleType="fitCenter"
        android:src="@drawable/arrow_down_blue_opac80"/>

    <Button
        android:id="@+id/buttonPingNow"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginLeft="@dimen/activity_horizontal_margin"
        android:layout_marginRight="@dimen/activity_horizontal_margin"
        android:layout_marginTop="5dp"
        android:text="@string/buttonPingNow"
        android:textSize="30sp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="3dp"
        android:text="OR"
        android:textColor="@color/primary"
        android:textSize="22sp"
        android:textStyle="bold"/>

    <Button
        android:id="@+id/buttonAdd"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginLeft="@dimen/activity_horizontal_margin"
        android:layout_marginRight="@dimen/activity_horizontal_margin"
        android:layout_marginTop="3dp"
        android:text="@string/buttonAdd"
        android:textSize="30sp"/>

</LinearLayout>